--- a/src/app/alterarcadastro/alterarcadastro.component.html
+++ b/src/app/alterarcadastro/alterarcadastro.component.html
@@ -2,19 +2,56 @@
 
 <body>
 
-    <div class="row container-fluid pt-4">
-        <div class="col-sm-6 dista">
-            <div class="card ">
-                <div class="card-body container-fluid pt-5 " style="background-color: #FFFFFF">
-                    <div class="col mx-auto text-center">
-                        <img src="https://i.imgur.com/NwSnfBn.png" class="img-fluid" width="416" height="416 "
-                            alt="imagem principal">
+    <div class="row container-fluid pt-5 ">
+        <div class="col-sm-6 pb-5 ">
+            <div class="margem-card card ml-5">
+                <div class="card card-group">
+                    <div class="col mx-auto text-center ">
+                        <img src="https://i.imgur.com/ZTD56n5.png" class='img-fluid' width="500" height="500"
+                            alt="gif de uma arvore">
                         <h2 class="cor card-title">Resumo da conta</h2>
                     </div>
+
+                    <div class="cor altera-menu card-group">
+                        <div class="card">
+                            <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                            <div class="ladocard card-body">
+                                <h5 class="card-title">Título do card</h5>
+                                <p class="card-text">Este é um card maior com suporte a texto embaixo.
+                                    </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                            <div class="meiocard card-body">
+                                <h5 class="card-title">Título do card</h5>
+                                <p class="card-text">Este é um card com suporte a texto embaixo.
+                                   </p>
+                            </div>
+
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                            <div class="ladocard card-body">
+                                <h5 class="card-title">Título do card</h5>
+                                <p class="card-text">Este é um card maior com suporte a texto embaixo.
+                                     </p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="d-flex cor justify-content-end">
+                        <h5> Histórico de compras</h5>
+                    </div>
+
+                </div>
+
+                <div class="col mx-auto text-center">
+
+                    <h2 class="cor card-title">Você plantou x árvores</h2>
                 </div>
             </div>
         </div>
-
         <!-- /imagem + card-->
 
         <!-- Formulario-->
@@ -24,41 +61,44 @@
                     <h1> Dados Cadastrais </h1>
 
                     <div class='label-float d-flex justify-content-center'>
-                        <input type="text" id="nome" placeholder="" required>
-                        <label for="nome">Nome*</label>
-
+                        <input [(ngModel)]='usuario.nomeCompletoUsuario' type="text" id="nome" placeholder="" required>
+                        <label for="nome">Nome completo*</label>
+        
                     </div>
-
+        
                     <div class="label-float d-flex justify-content-center">
-                        <input type="text" id="nomeSocial" placeholder="" required>
+                        <input [(ngModel)]='usuario.nomeSocial' type="text" id="nomeSocial" placeholder="" required>
                         <label for="nomeSocial">Nome social</label>
-
                     </div>
 
                     <div class="label-float d-flex justify-content-center">
-                        <input type="text" id="cpf" placeholder="" required>
+                        <input [(ngModel)]='usuario.nomeUsuario' type="text" id="nomeSocial" placeholder="" required>
+                        <label for="nomeSocial">Nome de usuário*</label>
+                    </div>
+        
+                    <div class="label-float d-flex justify-content-center">
+                        <input [(ngModel)]='usuario.cpf'type="text" id="cpf" placeholder="" required>
                         <label for="cpf">CPF*</label>
-
                     </div>
-
+        
                     <div class="label-float d-flex justify-content-center">
-                        <input type="text" id="email" placeholder="" required>
+                        <input [(ngModel)]='usuario.emailUsuario' type="text" id="email" placeholder="" required>
                         <label for="email">E-mail*</label>
-
                     </div>
-
+        
                     <div class="label-float d-flex justify-content-center">
-                        <input type="text" id="senha" placeholder="" required>
+                        <input (input)='confirmSenha($event)' type="text" id="senha" placeholder="" required>
                         <label for="senha">Senha*</label>
                     </div>
-
+        
                     <div class="label-float d-flex justify-content-center">
-                        <input type="text" id="confirmeSenha" placeholder="" required>
+                        <input [(ngModel)]='usuario.senhaUsuario' type="text" id="confirmeSenha" placeholder="" required>
                         <label for="confirmeSenha">Confirme sua senha*</label>
+        
                     </div>
-
+        
                     <div class="label-float d-flex justify-content-end ">
-                        <button>Finalizar cadastro</button>
+                        <button (click)='alterarCadastro()'>Finalizar cadastro</button>
                     </div>
                 </div>
             </div>
