--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -26,10 +26,10 @@
         <h5 class="title mb-2 mt-0 font-weight-bold">Conta</h5>
         <ul class="list-unstyled ">
           <li>
-            <a href="#!" class="cor">Minha conta</a>
+            <a routerLink="meuPerfil" class="cor">Minha conta</a>
           </li>
           <li>
-            <a href="#!" class="cor">Meus favoritos</a>
+            <a routerLink="meuPerfil/meusFavoritos" class="cor">Meus favoritos</a>
           </li>
         </ul>
       </div>
@@ -41,10 +41,10 @@
         <h5 class="title mb-2 mt-0 font-weight-bold">Links</h5>
         <ul class="list-unstyled text-nowrap ">
           <li>
-            <a href="#!" class="cor" routerLink='comoFunciona'>Como funciona?</a>
+            <a class="cor" routerLink='comoFunciona'>Como funciona?</a>
           </li>
           <li>
-            <a href="#!" class="cor" routerLink='nossoTime'>Nossa equipe</a>
+            <a class="cor" routerLink='nossoTime'>Nossa equipe</a>
           </li>
         </ul>
       </div>
@@ -57,7 +57,7 @@
         <h5 class="title mb-2 mt-0 font-weight-bold">Ajuda</h5>
         <ul class="list-unstyled text-nowrap">
           <li>
-            <a href="#!" class="cor">Contato</a>
+            <a routerLink="contato" class="cor">Contato</a>
           </li>
         </ul>
       </div>
