--- a/src/app/tela-produtos/tela-produtos.component.html
+++ b/src/app/tela-produtos/tela-produtos.component.html
@@ -7,7 +7,7 @@
                 <h1> Meus Produtos</h1>
             </div>
             <div class=" col-sm-6 pr-5 d-flex justify-content-end">
-                <a href="#" class="btn btn-primary">Adicionar produtos</a>
+                <a href="#" class="btn btn-primary" routerLink='criarProduto'>Adicionar produtos</a>
             </div>
 
         </div>
@@ -29,7 +29,10 @@
                         <h5 class="card-title">Título do card</h5>
                         <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
                             introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.</p>
-                        <a href="#" class="btn btn-primary ">Remover produto</a>
+                            <div class="d-flex justify-content-center">
+                                <a  routerLink= class="btn btn-primary">Ver mais</a>
+                            </div>
+                        
                     </div>
 
                 </div>
@@ -42,79 +45,8 @@
                         <a href="#" class="btn btn-primary">Remover produto</a>
                     </div>
 
-                </div>
-                <div class="card-group">
-                    <div class="card">
-                        <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
-                        <div class="card-body">
-                            <h5 class="card-title">Título do card</h5>
-                            <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
-                                introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.
-                            </p>
-                            <a href="#" class="btn btn-primary">Remover produto</a>
-
-                        </div>
-
-                    </div>
-                    <div class="card">
-                        <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
-                        <div class="card-body">
-                            <h5 class="card-title">Título do card</h5>
-                            <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
-                                introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.
-                            </p>
-                            <a href="#" class="btn btn-primary">Remover produto</a>
-                        </div>
-
-                    </div>
-                    <div class="card">
-                        <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
-                        <div class="card-body">
-                            <h5 class="card-title">Título do card</h5>
-                            <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
-                                introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.
-                            </p>
-                            <a href="#" class="btn btn-primary">Remover produto</a>
-                        </div>
-
-                    </div>
-                    <div class="card-group">
-                        <div class="card">
-                            <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
-                            <div class="card-body">
-                                <h5 class="card-title">Título do card</h5>
-                                <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como
-                                    uma
-                                    introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para
-                                    demonstração.</p>
-                                <a href="#" class="btn btn-primary">Remover produto</a>
-                            </div>
-
-                        </div>
-                        <div class="card">
-                            <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
-                            <div class="card-body">
-                                <h5 class="card-title">Título do card</h5>
-                                <p class="card-text">Este é um card com suporte a texto embaixo, que funciona como uma
-                                    introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para
-                                    demonstração.</p>
-                                <a href="#" class="btn btn-primary">Remover produto</a>
-                            </div>
-
-                        </div>
-                        <div class="card">
-                            <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
-                            <div class="card-body">
-                                <h5 class="card-title">Título do card</h5>
-                                <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como
-                                    uma
-                                    introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para
-                                    demonstração.</p>
-                                <a href="#" class="btn btn-primary">Remover produto</a>
-                            </div>
-
-                        </div>
-                    </div>
+                
+                    
                 </div>
             </div>
         </div>
