--- a/src/app/nosso-time/nosso-time.component.css
+++ b/src/app/nosso-time/nosso-time.component.css
@@ -1,94 +1,28 @@
-/*pagina do Nosso Time*/
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-ul.social-networks li{
-    display: inline;
-    margin: 0;
-    padding: 5px;
-    
-
-}
-
-ul.social-networks{
+/*Icones*/
+.ul-social-network{
     list-style: none;
-       padding: 0;
-       
-}
-
-.fa{
-    font-size: 15pt;
-    color: black;
-    padding:5px;
-    }
-
-
-.fa-facebook-square:hover{
-color:#3b5998;
-
-}
-
-.fa-instagram:hover{
-    color:#C13584;
-    }
-
-.fa-twitter-square:hover{
-    color:#143c91;
-    }
-
-.fa-linkedin:hover{
-color:#007dbb;
-
-}
-
-.fa-github-alt:hover{
-    color:#F5CAC3;
-    }
-
+    display:flex;
+    justify-content: center;
     
+} 
 
- .fa-heart-o:hover{
-    color: darkred;
- }
-
-.altera-menu {
-    font-style: normal; /*caso queira deixar alterar o estilo da fonte*/
-    font-size: 1.1rem; /*caso queira alterar o tamanho da fonte*/
-    font-family: Roboto, sans-serif; /*caso queira mudar o tipo de fonte*/
+    .tm-social{
+        position:relative;
+        left: 50px;
+        right: 30px;
+        width: 70px;
+        height: 70px;
+        padding: 10px;
+        margin-top: 20px;
+        
+    }
     
- }
-
- .cor{
-    color: #84A59D;
-}
-
-/* caixa de pesquisa */
-#busca{
-    background-color: white;
-    border:initial;
-    width: 300px;
-    float: left;
-    border:0;
-}
-
-#txtBusca{
-    float: left;
-    background-color: white;
-    padding-left: 5px;
-    font-style:initial;
-    font-size: 18px;
-    border: none;
-    height: 32px;
-    width: 260px;
-    font-family:sans-serif;
-}
-
-/* caixa de pesquisa */
-/*
-/PAGINA INICIAL
-*/
-
-/*imagem do Integrande*/
-
-/*Card do Nosso Time*/
+    hr{
+    padding-top: 30px;
+    }
+/*foto do Integrante*/
 .br-50{
     border-radius:50%;
 }
@@ -128,70 +62,43 @@ color:#007dbb;
   height: 100%;
   backface-visibility: hidden;
 }
+
+
+.imgpos{
+    position: absolute;
+    bottom: 45px;
+    top: 0;
+  }
+
 /*borda do Card*/
 .borda {
     margin:10px;
     margin-bottom: 10px;
-    left: 40px;
+    left: 10px;
     background: #FFFFFF;
-    box-decoration-break: clone;    
-        
- 
-}
-
-.tm-icones{
-    position:static;
-    width: 36px;
-    height: 36px;
-    left: 100px;
-    top:100px;
-}
-
-    
-
-    .ul-social-network{
-        list-style: none;
-        display:flex;
-        flex-flow: row;
-        justify-content: center;
-        align-items:center;
-        
-    }
-    .tm-fa{
-        font-size: 35pt;
-        padding: 35px;
-    }
-    .infoTime{
-        position:relative;
+    box-decoration-break: clone; 
+}   
+  
+/*nome do Integrante*/
+    .nomeIntegrante {
+        position:-webkit-sticky;
+        text-align:center;
         display: flex;
         justify-content: center;
-        align-items: center;
-        top: 50px;
-      
-        
-        
-    }
-    /*nome do Integrante*/
-    .center {
-        position:relative;
-        top: 10%;
-        width: 135%;
-        text-align: center;
-        font-size: 38px;
+        margin-left: 170px;
+        font-size: 40px;
         color: #84A59D;
-        font-family: Roboto;
-        font-style: normal;
         font-weight: bold;
-        line-height: 53px;
+        font-family: 'Roboto', sans-serif;      
       }
 
       /*texto de cada Integrante */
       .infoTexto{
           color:  #84A59D;
-          font-family: Roboto;
           font-style: normal;
           font-weight: normal;
           margin-top: 90px;
+          font-family: 'Roboto', sans-serif;
           
       }
 
@@ -200,14 +107,13 @@ color:#007dbb;
         font-family: Roboto;
         font-style: normal;
         font-weight: normal;
+        font-family: 'Roboto', sans-serif;
       }
 
-.txtCor{
-    color: #84A59D;
-    
-}
-.imgpos{
-    position: absolute;
-    bottom: 50px;
-    top: 0;
-}
+      .curiosidade{
+        color: #84A59D;
+        font-weight: bold;
+        font-family: 'Roboto', sans-serif;
+      }
+
+     
