Icone linkedin Nosso Time atualizado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-menu *ngIf='auth.logado() == false'></app-menu>
-<app-menu-logado *ngIf='auth.logado()== true'></app-menu-logado>
-<router-outlet></router-outlet>
+<app-nosso-time></app-nosso-time>
 <app-rodape></app-rodape>
 
 
