--- a/src/app/nosso-time/nosso-time.component.html
+++ b/src/app/nosso-time/nosso-time.component.html
@@ -31,7 +31,7 @@
                                 <li>
                                     <a href="https://www.linkedin.com/in/vcolvr/" target="_blank"
                                         class="icoLinkedin">
-                                        <img src="https://imgur.com/a/HChcrTy" class="tm-social" alt="icone linkedin">
+                                        <img src="https://i.imgur.com/Zh2hD11.png" class="tm-social" alt="icone linkedin">
                                     </a>
     
                                     <a href="https://github.com/Vcolvr" target="_blank" class="icoGitHub">
@@ -87,7 +87,7 @@
                                 <li>
                                     <a href="https://www.linkedin.com/in/caroline-miranda-374738148/" target="_blank"
                                         class="icoLinkedin">
-                                        <img src="https://imgur.com/a/HChcrTy" class="tm-social" alt="icone linkedin">
+                                        <img src="https://i.imgur.com/Zh2hD11.png" class="tm-social" alt="icone linkedin">
                                     </a>
     
                                     <a href="https://github.com/carol-mira" target="_blank" class="icoGitHub">
@@ -144,7 +144,7 @@
                         <li>
                             <a href="https://www.linkedin.com/in/gustavo-martins-3a9980136/" target="_blank"
                                 class="icoLinkedin">
-                                <img src="https://imgur.com/a/HChcrTy" class="tm-social" alt="icone linkedin">
+                                <img src="https://i.imgur.com/Zh2hD11.png" class="tm-social" alt="icone linkedin">
                             </a>
 
                             <a href="https://github.com/GustavoMarttiins" target="_blank" class="icoGitHub">
@@ -203,7 +203,7 @@
                         <li>
                             <a href="https://www.linkedin.com/in/ana-livia-tres-7a91aa1a3/" target="_blank"
                             class="icoLinkedin">
-                            <img src="https://imgur.com/a/HChcrTy" class="tm-social" alt="icone linkedin">
+                            <img src="https://i.imgur.com/Zh2hD11.png" class="tm-social" alt="icone linkedin">
                         </a>
 
                         <a href="https://github.com/analivia1709" target="_blank" class="icoGitHub">
@@ -260,7 +260,7 @@
                         <li>
                             <a href="https://www.linkedin.com/in/kyem2/" target="_blank"
                                 class="icoLinkedin">
-                                <img src="https://imgur.com/a/HChcrTy" class="tm-social" alt="icone linkedin">
+                                <img src="https://i.imgur.com/Zh2hD11.png" class="tm-social" alt="icone linkedin">
                             </a>
 
                             <a href="https://github.com/Kyem-Araujo" target="_blank" class="icoGitHub">
@@ -316,7 +316,7 @@
                         <li>
                             <a href="https://www.linkedin.com/in/rilton-maciel-611a83168/" target="_blank"
                             class="icoLinkedin">
-                            <img src="https://imgur.com/a/HChcrTy" class="tm-social" alt="icone linkedin">
+                            <img src="https://i.imgur.com/Zh2hD11.png" class="tm-social" alt="icone linkedin">
                         </a>
 
                         <a href="https://github.com/Majoralphax" target="_blank" class="icoGitHub">
