Atualização do Icone linkedin Nosso Time

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-menu *ngIf='auth.logado() == false'></app-menu>
-<app-nosso-time></app-nosso-time>
+<app-menu-logado *ngIf='auth.logado()== true'></app-menu-logado>
+<router-outlet></router-outlet>
 <app-rodape></app-rodape>
 
 
