--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -165,7 +165,7 @@
 
                                 <!--Botão de Entrar-->
                                 <div class="justify-center">
-                                    <button (click)='entrar()'  class="bt-entrar close" >Seja bem-vinde</button>
+                                    <button (click)='entrar()'  class="bt-entrar close" data-dismiss="modal"  >Seja bem-vinde</button>
                                 </div>
                                 <!--/Botão de Entrar-->
                                 <div class="justify-center">
