alterar cadastro e criar produto

--- a/src/app/alterarcadastro/alterarcadastro.component.html
+++ b/src/app/alterarcadastro/alterarcadastro.component.html
@@ -87,12 +87,12 @@
                     </div>
         
                     <div class="label-float d-flex justify-content-center">
-                        <input (input)='confirmSenha($event)' type="text" id="senha" placeholder="" required>
+                        <input (input)='confirmSenha($event)' type="password" id="senha" placeholder="" required>
                         <label for="senha">Senha*</label>
                     </div>
         
                     <div class="label-float d-flex justify-content-center">
-                        <input [(ngModel)]='usuario.senhaUsuario' type="text" id="confirmeSenha" placeholder="" required>
+                        <input [(ngModel)]='usuario.senhaUsuario' type="password" id="confirmeSenha" placeholder="" required>
                         <label for="confirmeSenha">Confirme sua senha*</label>
         
                     </div>
