--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -6,9 +6,9 @@
 
 <body>
 
-    <div class='container fonte'>
+    <div class='container fonte' height="1000px">
      
-        <div class=" card" >
+        <div class=" card"  >
             <h1> Cadastre-se </h1>
 
             <div class='label-float d-flex justify-content-center'>
@@ -33,12 +33,12 @@
             </div>
 
             <div class="label-float d-flex justify-content-center">
-                <input [(ngModel)]='usuario.emailUsuario' type="text" id="email" placeholder="" required>
+                <input [(ngModel)]='usuario.emailUsuario' type="password" id="email" placeholder="" required>
                 <label for="email">E-mail*</label>
             </div>
 
             <div class="label-float d-flex justify-content-center">
-                <input (input)='confirmSenha($event)' type="text" id="senha" placeholder="" required>
+                <input (input)='confirmSenha($event)' type="password" id="senha" placeholder="" required>
                 <label for="senha">Senha*</label>
             </div>
 
