--- a/src/app/criarproduto/criarproduto.component.html
+++ b/src/app/criarproduto/criarproduto.component.html
@@ -23,8 +23,10 @@
                     <div class="label-float d-flex justify-content-center">
                         
                         <label for="EscolhaUmaCategoria">Escolha uma categoria*</label>
-                        <select class="form" name="categoria" id="categoria" class="form-control">
-                            <option value=""></option>
+                        <select class="form" name="categoria" id="categoria" class="form-control" [(ngModel)]='idCategoria' (change)='findByIdCategoria'>
+                            <option *ngFor='let item of listaCategorias' value="{{item.idCategoria}}">
+                                {{item.departamento}}
+                            </option>
                         </select>
 
                     </div>
@@ -76,7 +78,7 @@
                         alt="desenho de homem passando cartão na máquina">
                 </div>
                 <div class="label-float d-flex justify-content-end pt-3 px-5">
-                    <button type="button" class="btn btn-primary" data-toggle="modal"
+                    <button (click)='criarProduto()' type="button" class="btn btn-primary" data-toggle="modal"
                         data-target="#ExemploModalCentralizado">
                         Finalizar cadastro
                     </button>
