--- a/src/app/menu-logado/menu-logado.component.html
+++ b/src/app/menu-logado/menu-logado.component.html
@@ -64,7 +64,7 @@
 
 <!-- IconeUser-->
 <div class="d-flex justify-content-end pr-4">
-    <button class="btn btn-floating " data-toggle="modal" data-target="#ExemploModalCentralizado">
+    <button class="btn btn-floating " data-toggle="modal" data-target="#ExemploModalCentralizado" routerLink='/meuPerfil'>
         <img src="https://i.imgur.com/lAnmYcd.png" width="40" height="40" alt="icone do login">
     </button>
 </div>
