--- a/src/app/tela-produtos/tela-produtos.component.html
+++ b/src/app/tela-produtos/tela-produtos.component.html
@@ -4,7 +4,7 @@
 
         <div class="row">
             <div class=" col-sm-6 pl-5 cor d-flex justify-content-start">
-                <h1> Meus Produtos</h1>
+                <h1>Meus Produtos</h1>
             </div>
             <div class=" col-sm-6 pr-5 d-flex justify-content-end">
                 <a href="#" class="btn btn-primary" routerLink='criarProduto'>Adicionar produtos</a>
@@ -12,45 +12,17 @@
 
         </div>
         <div class="card mr-4 ml-4 ">
-            <div class=" card-group text-center">
+            <div class=" card-group text-center" *ngFor='let item of usuario.produtosUsuario'>
                 <div class="card ">
-                    <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                    <img class="card-img-top" src="{{item.fotoProduto1}}" alt="Imagem de capa do card">
                     <div class="card-body">
-                        <h5 class="card-title">Título do card</h5>
-                        <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
-                            introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.</p>
-                        <a href="#" class="btn btn-primary">Remover produto</a>
-                    </div>
-
-                </div>
-                <div class="card">
-                    <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
-                    <div class="card-body">
-                        <h5 class="card-title">Título do card</h5>
-                        <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
-                            introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.</p>
-                            <div class="d-flex justify-content-center">
-                                <a  routerLink= class="btn btn-primary">Ver mais</a>
-                            </div>
-                        
-                    </div>
-
-                </div>
-                <div class="card">
-                    <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
-                    <div class="card-body">
-                        <h5 class="card-title">Título do card</h5>
-                        <p class="card-text">Este é um card maior com suporte a texto embaixo, que funciona como uma
-                            introdução a um conteúdo adicional. Este conteúdo é um pouco maior, para demonstração.</p>
-                        <a href="#" class="btn btn-primary">Remover produto</a>
-                    </div>
-
-                
-                    
+                        <h5 class="card-title">{{item.nomeProduto}}</h5>
+                        <p class="card-text">{{item.preco}}.</p>
+                        <a href="#" class="btn btn-primary" [routerLink]="['verProduto', item.idProduto]">Ver Mais</a>
+                        </div>
                 </div>
             </div>
         </div>
-
 
 
     </div>
