--- a/src/app/pagina-produto-vendedor/pagina-produto-vendedor.component.html
+++ b/src/app/pagina-produto-vendedor/pagina-produto-vendedor.component.html
@@ -1,118 +1,76 @@
 <body>
 
-    <div class='container'>
-  
-  
-      <div class="card">
-        <div class="row">
-  
-          <div class="col-sm-9">
-            <h1>Creme capilar de leite de coco para cabelos cacheados</h1>
-  
-  
-          </div>
-  
-          <div class="col-sm-3 d-flex justify-content-end text-nowrap">
-  
-            <h1 >R$ 39.90</h1>
-  
-          </div>
-  
+  <div class='container'>
+
+
+    <div class="card">
+      <div class="row">
+
+        <div class="col-sm-9">
+          <h1>{{produto.nomeProduto}}</h1>
+
+
         </div>
-  
-        <div class="row pt-3">
-  
-          <div class="col-sm d-flex justify-content-center">
-  
-            <div data-interval="false" id="carouselExampleFade" class="carousel carousel-fade img-fluid"
-              data-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img class="d-block w-100" src="https://i.imgur.com/7q6Fouf.jpg" alt="Primeiro Slide">
-                </div>
-                <div class="carousel-item ">
-                  <img class="d-block w-100 img-fluid"
-                    src="https://cdn.awsli.com.br/600x450/2/2987/produto/31845312/3a4ddd4b54.jpg" alt="Segundo Slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100 img-fluid "
-                    src="https://www.lohasstore.com.br/fotos/grande/386fg1/creme-hidratante-facial-erva-mate-natural-e-vegano-cativa-natureza-60g.jpg"
-                    alt="Terceiro Slide">
-                </div>
-  
-                <div class="carousel-item ">
-                  <iframe class="embed-responsive-item" width="560" height="315"
-                    src="https://www.youtube.com/embed/JJVF7iWH6_c" title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-                </div>
-              </div>
-              <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Anterior</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Próximo</span>
-              </a>
-            </div>
-  
-          </div>
-  
-          <div class="col-sm-12 row d-flex justify-content-around pt-5">
-  
-            <div class="d-flex justify-content-center">
-  
-              <div class="col-sm-4 d-flex justify-content-center">
-                <button type="button" class="btncomprar" data-toggle="modal" data-target="#ExemploModalCentralizado5">
-                  Alterar produto
-                </button>
-              </div>
-  
-              <div class="col-sm-4 d-flex justify-content-center ">
-                <button type="button" class="" data-toggle="modal" data-target="#ExemploModalCentralizado5">
-                  Excluir produto
-                </button>
-              </div>
-            </div>
-  
-          </div>
-  
-  
-          <div class="text-justify pt-5">
-  
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut eius laudantium temporibus fugit optio eum,
-              ipsa aperiam odit rem qui repudiandae ipsum molestiae, voluptatum, delectus explicabo quam quia nulla.
-              Tempora?</p>
-  
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut eius laudantium temporibus fugit optio eum,
-              ipsa aperiam odit rem qui repudiandae ipsum molestiae, voluptatum, delectus explicabo quam quia nulla.
-              Tempora?</p>
-  
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut eius laudantium temporibus fugit optio eum,
-              ipsa aperiam odit rem qui repudiandae ipsum molestiae, voluptatum, delectus explicabo quam quia nulla.
-              Tempora?</p>
-  
-  
-  
-  
-          </div>
-  
-  
-  
-  
-  
-  
-  
-  
-  
+
+        <div class="col-sm-3 d-flex justify-content-end text-nowrap">
+
+          <h1>{{produto.preco}}</h1>
+
         </div>
-  
-  
-  
-  
-  
+
       </div>
-  
+
+      <div class="row pt-3">
+
+        <div class="col-sm d-flex justify-content-center">
+
+          <div data-interval="false" id="carouselExampleFade" class="carousel carousel-fade img-fluid"
+            data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="{{produto.fotoProduto1}}" alt="Primeira foto do produto">
+              </div>
+              <div class="carousel-item ">
+                <img class="d-block w-100 img-fluid" src="{{produto.fotoProduto2}}g" alt="Segundo Slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid " src="{{produto.fotoProduto3}}" alt="Terceiro Slide">
+              </div>
+
+              <div class="carousel-item ">
+                <iframe class="embed-responsive-item" width="560" height="315" src="{{produto.videoProduto}}"
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="col-sm-12 row d-flex justify-content-around pt-5">
+
+          <div class="d-flex justify-content-center">
+
+            <div class="col-sm-4 d-flex justify-content-center">
+              <button type="button" class="btncomprar" data-toggle="modal" data-target="#ExemploModalCentralizado5"
+              [routerLink]="['alterarProduto', item.idProduto]">
+                Alterar produto
+              </button>
+            </div>
+
+            <div class="col-sm-4 d-flex justify-content-center ">
+              <button (click)='deletarProduto' type="button" class="" data-toggle="modal" data-target="#ExemploModalCentralizado5">
+                Excluir produto
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="text-justify pt-5">
+
+          <p>{{produto.descricao}}</p>
+        </div>
+      </div>
     </div>
-  </body>
+  </div>
+</body>
