Correções de rotas

--- a/src/app/menu-logado/menu-logado.component.html
+++ b/src/app/menu-logado/menu-logado.component.html
@@ -129,12 +129,12 @@
     <ul class="nav nav-tabs">
   
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle adapt" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Olá, {{nomeUsuario}}</a>
+          <a class="nav-link dropdown-toggle adapt" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Olá, {{nomeUsuario}}</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" routerLink='meuPerfil'>Meu perfil</a>
-            <a class="dropdown-item" routerLink='meuPerfil/MinhasCompras'>Minhas compras</a>
-            <a class="dropdown-item" routerLink='meuPerfil/MeusFavoritos'>Meus favoritos</a>
-            <a class="dropdown-item" routerLink='meuPerfil/MeusProdutos'>Meus produtos</a>
+            <a class="dropdown-item" routerLink="meuPerfil/minhasCompras">Minhas compras</a>
+            <a class="dropdown-item" routerLink="meuPerfil/meusFavoritos">Meus favoritos</a>
+            <a class="dropdown-item" routerLink="meuPerfil/meusProdutos">Meus produtos</a>
             <a class="dropdown-item" (click)='sair()'>Sair</a>
           </div>
         </li>
