--- a/src/app/pagina-produto-vendedor/pagina-produto-vendedor.component.html
+++ b/src/app/pagina-produto-vendedor/pagina-produto-vendedor.component.html
@@ -54,7 +54,7 @@
 
             <div class="col-sm-4 d-flex justify-content-center">
               <button type="button" class="btncomprar" data-toggle="modal" data-target="#ExemploModalCentralizado5"
-              [routerLink]="['alterarProduto', item.idProduto]">
+              [routerLink]="['alterarProduto', produto.idProduto]">
                 Alterar produto
               </button>
             </div>
